# factory_bot

./: .env  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  pyproject.toml
authentication/: models.py  viewsets.py
authentication/migrations/: 0001_initial.py  0002_alter_customuser_options_and_more.py
factory_bot/: asgi.py  manage.py  settings.py
factory_bot/authentication/: models.py  routers.py  serializers.py  urls.py  views.py  viewsets.py
factory_bot/factory_bot/: routers.py  settings.py  urls.py  wsgi.py
factory_bot/messages_bot/: models.py  routers.py  serializers.py  viewsets.py
factory_bot/messages_bot/management/commands/: bot.py
factory_bot/messages_bot/migrations/: 0001_initial.py  0002_alter_messages_user.py
messages_bot/: apps.py  models.py
messages_bot/management/commands/: bot.py
messages_bot/migrations/: 0003_alter_messages_options.py
